# rff

./: Cargo.toml  readme.md
examples/: readme.md
examples/simple/: Cargo.toml  build.rs  readme.md
examples/simple/src/: main.rs
examples/simple/src/view/: index.html
examples/simple/src/view/my_lib/css/: main.css
examples/simple/src/view/my_lib/js/: app.js  renderer.js
src/: api.js  handler.rs  lib.rs  structs.rs
src/handler/: data_handler.rs  file_handler.rs  mod.rs  sql_handler.rs  window_handler.rs
src/helper/: api.js  data_controller.rs  html.rs  mod.rs
src/js/: api.js
