[package]
name = "RFF"
version = "0.1.0"
authors = ["YukiFujimatsu"]
edition = "2018"
license = "Apache-2.0 OR MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rff = {git = "https://github.com/YukiFujimatsu/rff", branch = "main"}

[build-dependencies]
rff = {git = "https://github.com/YukiFujimatsu/rff", branch = "main"}
